fixed up various cosmetics: removed scrollbars from certain pages, changed font (option?) and turned lower case. not yet pushed to heroku

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -15,6 +15,10 @@
 // Scaffolding
 // -------------------------
 
+* {
+  font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
+}
+
 html, body {
   height: 100%;
   background-color: white;
@@ -182,7 +186,7 @@ legend {
   top:0;
   text-align: left;
   height:100%;
-  width:100%
+  width:100%;
   color: white;
   background-image: url('../img/city-lights-bokeh.jpg');
   background-repeat: no-repeat;
